Fixes to collapsable items

--- a/style.css
+++ b/style.css
@@ -5,10 +5,6 @@
     font-family: 'Roboto Mono', monospace;
 }
 
-body::-webkit-scrollbar { 
-    display: none;  /* Safari and Chrome */
-}
-
 /* List element styles */
 li {
     list-style: none;
@@ -38,7 +34,7 @@ nav {
     align-items: center;
     padding-top: 15px;
     padding-bottom: 15px;
-    border-bottom: 3px solid silver;
+    border-bottom: 5px solid silver;
     position: sticky;
     top: 0;
     background-color: white;
@@ -93,6 +89,7 @@ section > h2 {
     display: flex;
     flex-direction: column;
     gap: 4px;
+    width:99.6%;
 }
 
 .hidden-dropdown {
@@ -129,6 +126,11 @@ section > h2 {
 }
 
 @media screen and (max-width: 600px) {
+    * {
+        padding: 0;
+        margin: 0;
+        font-family: 'Roboto Mono', monospace;
+    }
     nav {
         display: flex;
         flex-wrap: wrap;
@@ -144,7 +146,7 @@ section > h2 {
         text-align:center;
         max-width:100%;
         display: flex;
-        gap:5px;
+        gap:0px;
         flex-wrap: wrap;
         align-content: space-between;
     }
@@ -154,35 +156,57 @@ section > h2 {
     }
 
     .notable-work-points > li{
-        margin-top: 20px;
+        margin-top: 0px;
         margin-left: 30px;
         margin-right: 30px;
     }
 }
 
-input[type="checkbox"] {
-  display: none;
+/* collapse content */
+
+#expand {
+    max-height: 0px;
+    width: 0px;
+    overflow: hidden;
+    background-color:lightgray;
+    transition: max-height 0.5s, width 0.5s ease-in-out;
+    padding-left:5px;
+    color:black;
+    border-radius: 7px;
 }
 
-.wrap-collabsible {
-    padding: 1px;
+input {
+    display: none;
+    visibility: hidden;
 }
 
-.lbl-toggle {
+input:checked+label+#expand {
+    max-height: 100%;
+    width: 100%;
+    background-color:lightgray;
+    color:black;
+    border-radius: 7px;
+
+}
+
+[id^="toggle"]:checked + label::before {
+    transform: rotate(90deg) translateX(-3px);
+}
+
+label {
     font-weight:bold;
     display: inline-block;
     text-align: left;
     cursor: pointer;
     border-radius: 7px;
-    transition: all 0.25s ease-out;
     padding-left:2px;
 }
 
-.lbl-toggle:hover {
+label:hover {
     color: black;
 }
 
-.lbl-toggle::before {
+label::before {
     content: " ";
     display: inline-block;
     border-top: 5px solid transparent;
@@ -192,33 +216,4 @@ input[type="checkbox"] {
     margin-right: 0.7rem;
     transform: translateY(-2px);
     transition: transform 0.2s ease-out;
-}
-
-.toggle:checked + .lbl-toggle::before {
-    transform: rotate(90deg) translateX(-3px);
-}
-
-.collapsible-content {
-    max-height: 0px;
-    overflow: scroll;
-    transition: max-height 0.25s ease-in-out;
-}
-
-.toggle:checked + .lbl-toggle + .collapsible-content {
-    max-height: 350px;
-}
-
-.toggle:checked + .lbl-toggle {
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-}
-
-.collapsible-content .content-inner {
-    border-radius: 0.25rem;
-    background: #f2f2f2;
-    padding: 0.5rem 1rem;
-}
-
-.collapsible-content p {
-    margin-bottom: 0;
 }
